apps/erpnext/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: erpnext
  namespace: erpnext
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls.certresolver: mydnschallenge
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - en.doany.io
  rules:
    - host: en.doany.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: erpnext
                port:
                  number: 8080
